# srpg-engine

./: CMakeLists.txt  LICENSE  README.md
sdl_sandbox/: CMakeLists.txt  README.md  exercise1.cpp  exercise1.h  exercise10.cpp  exercise11.cpp  exercise12.cpp  exercise13.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise7.cpp  exercise8.cpp  exercise9.cpp  exercises.h  main.cpp  sdl.h  setup.cpp  setup.h
sdl_sandbox/images/: emerald-walk-sprites.xcf
src/: CMakeLists.txt  combat.cc  combat.cpp  combat.h  combat.hh  error.cc  error.hh  graphics.cc  graphics.hh  main.cc  main.cpp  map.cc  map.h  map.hh  maprunner.cc  random.cc  random.hh  sdl.hh  unit.cc  unit.cpp  unit.h  unit.hh  unit_attrs.cc  unit_attrs.cpp  unit_attrs.h  unit_attrs.hh  weapon.cc  weapon.cpp  weapon.h  weapon.hh
test/: CMakeLists.txt  tests.cpp  unit_attrs_test.cpp  unit_test.cpp
